--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   font-style: normal;
 }
 
+
 * {
   box-sizing: border-box;
 }
@@ -25,8 +26,6 @@
 .sidebar {
   background-image: url('unsplash.jpg');
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   width: clamp(30%, 45vw, 550px); /* Between 30% and 40% of the viewport width, max 400px */
   height: 100vh;
   position: relative;
@@ -72,26 +71,30 @@
   }
 }
 
+/* begin form styling */
 .content {
+  width: 100%;
   display: flex;
   flex-flow: column;
   justify-content: center;
   gap: 1rem;
+
+  & > * {
+  margin-left: 5rem;
+  margin-right: 5rem;
+  }
 }
 
-.content > * {
- margin-left: 5rem;
- margin-right: 5rem;
-}
 
 .form-container {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
   margin: 0;
-}
+  
+  & > * {
+    margin-left: 5rem;
+    margin-right: 5rem;
 
-.form-container > * {
- margin-left: 5rem;
- margin-right: 5rem;
+  }
 }
 
 form {
@@ -99,11 +102,62 @@ form {
   flex: wrap;
   gap: 1rem;
   margin-bottom: 1rem;
+  flex-flow: column;
+
+  & > div {
+    display: flex;
+    gap: 5rem;
+    
+    & > div {
+      display: flex;
+      flex-flow: column;
+    }
+  }
 }
 
-form > div > div{
-  display: flex;
-  flex-flow: column;
+label {
+  text-transform: uppercase;
+  font-size: .8rem;
+}
+
+input {
+  border: 1px solid #E5E7EB;
+  border-radius: 5%;
+}
+
+input:invalid {
+  border: 1px solid #ff8888;
+}
+
+input + span {
+  position: relative;
+}
+
+input:required + span::after {
+  font-size: 0.7rem;
+  position: absolute;
+  content: "required";
+  color: white;
+  background-color: #d66464;
+  padding: 5px 10px;
+  top: -26px;
+  right: -70px;
+}
+/* end form styling*/ 
+
+button {
+  background-color: #596D48;
+  color: #ffffff;
+  width: 8rem;
+  height: 2rem;
+  border: none;
+  border-radius: .5rem;
+}
+
+.link {
+  color: #596D48;
+  text-decoration: none;
+  font: 500
 }
 
 .bold {
@@ -114,16 +168,13 @@ form > div > div{
   font-style: italic;
 }
 
-/* Mobile-Friendly Layout */
 @media (max-width: 90rem) {
   .main {
     flex-flow: column;
   }
-
   .sidebar {
     width: 100%;       /* Full width on mobile */
     height: 50vh;      /* Half the viewport height */
   }
-
 }
 
